--- a/src/schemas/spend.yaml
+++ b/src/schemas/spend.yaml
@@ -1,40 +1,12 @@
 spend:
   type: object
   properties:
-    coin_id:
+    coin:
+      $ref: ./coin.yaml#/coin
+    puzzle:
       type: string
-      format: bytes
-    puzzle_hash:
+      format: hex
+    solution:
       type: string
-      format: bytes
-    height_relative:
-      type: integer
-      format: uint32
-    before_seconds_relative:
-      type: integer
-      format: uint32
-    birth_height:
-      type: integer
-      format: uint32
-    birth_seconds:
-      type: integer
-      format: uint32
-    create_coin:
-      type: array
-      items:
-        - type: string
-          format: bytes
-        - type: integer
-          format: uint64
-        - type: string
-          format: bytes
-    agg_sig_me:
-      type: array
-      items:
-        - type: string
-          format: bytes
-        - type: string
-          format: bytes
-    flags:
-      type: integer
-      format: uint32
+      format: hex
+      
