--- a/src/daemon.yaml
+++ b/src/daemon.yaml
@@ -188,7 +188,7 @@ paths:
   /get_version:
     post:
       tags:
-        - Daemon
+        - Shared
       summary: Get the installed version of chia at the endpoint.
       description: Get the installed version of chia at the endpoint.
       operationId: get_version
