--- a/src/full_node.yaml
+++ b/src/full_node.yaml
@@ -116,6 +116,28 @@ components:
       $ref: "schemas/signage_point.yaml#/signage_point"
     spend_bundle:
       $ref: "schemas/spend_bundle.yaml#/spend_bundle"
+    spend_type:
+      type: string
+      enum:
+        - send_xch_transaction
+        - cat_spend
+        - take_offer
+        - cancel_offer
+        - nft_set_nft_did
+        - nft_transfer_nft
+        - create_new_pool_wallet
+        - pw_absorb_rewards
+        - create_new_did_wallet
+      description: >
+        - send_xch_transaction: 9_401_710
+        - cat_spend: 36_382_111
+        - take_offer: 721_393_265
+        - cancel_offer: 212_443_993
+        - nft_set_nft_did: 115_540_006
+        - nft_transfer_nft: 74_385_541
+        - create_new_pool_wallet: 18_055_407
+        - pw_absorb_rewards: 82_668_466
+        - create_new_did_wallet: 57_360_396
     unfinished_header_block:
       $ref: "schemas/unfinished_header_block.yaml#/unfinished_header_block"
     apiResponse:
@@ -957,22 +979,47 @@ paths:
           application/json:
             schema:
               type: object
-              properties:
-                spend_bundle:
-                  $ref: "#/components/schemas/spend_bundle"
-                cost:
-                  type: integer
-                  format: uint64
-                target_times:
-                  type: array
-                  items:
-                    type: integer
-                spend_type:
-                  type: integer
-                  format: uint64
-                spend_count:
-                  type: integer
-                  default: 1
+              oneOf:
+                - properties:
+                    spend_bundle:
+                      $ref: "#/components/schemas/spend_bundle"
+                    target_times:
+                      type: array
+                      items:
+                        type: integer
+                    spend_count:
+                      type: integer
+                      default: 1
+                  required:
+                    - spend_bundle
+                    - target_times
+                - properties:
+                    cost:
+                      type: integer
+                      format: uint64
+                    target_times:
+                      type: array
+                      items:
+                        type: integer
+                    spend_count:
+                      type: integer
+                      default: 1
+                  required:
+                    - cost
+                    - target_times
+                - properties:
+                    spend_type:
+                      $ref: "#/components/schemas/spend_type"
+                    target_times:
+                      type: array
+                      items:
+                        type: integer
+                    spend_count:
+                      type: integer
+                      default: 1
+                  required:
+                    - spend_type
+                    - target_times
       responses:
         "200":
           description: OK
